--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="https://via.placeholder.com/150" alt="Ranjeet Singh Cricket Expert Logo" class="logo">
+            <img src="logo.jpg" alt="Ranjeet Singh Cricket Expert Logo" class="logo">
         </div>
         
         <h1>Ranjeet Singh</h1>
